# retsful-api-clean-arcitecture

./: .env  .env.example  Cargo.toml  README.md  summary.md
migrations/: 20240101000000_create_users_table.sql  20240101000001_create_contacts_and_addresses.sql
src/: app.rs  lib.rs  main.rs
src/delivery/http/: router.rs
src/delivery/http/handler/: contact_handler.rs  mod.rs  user_handler.rs
src/domain/entity/: address_entity.rs  contact_entity.rs  mod.rs  user_entity.rs
src/domain/repository/: contact_repository.rs  mod.rs  user_repository.rs
src/infrastructure/auth/: jwt.rs  password.rs
src/infrastructure/db/: postgres.rs
src/infrastructure/repository/: mod.rs  postgres_contact_repository.rs  postgres_user_repository.rs
src/usecase/: contact_usecase.rs  mod.rs  user_usecase.rs
tests/: api_tests.rs
