[package]
name = "rust-clean-arcitecture"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
async-trait = "0.1"
validator = { version = "0.18", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["serde", "v4"] }

[dev-dependencies]
mockall = "0.13"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
mime = "0.3"
reqwest = { version = "0.11", features = ["json"] } 
http-body-util = "0.1"
serial_test = "3.0"
